--- a/css/style.scss
+++ b/css/style.scss
@@ -39,6 +39,7 @@ nav{
         display: flex;
         li{
             padding: 0 2rem;
+            animation: zoomin 1s ease;
         }
     }
     .active{
@@ -53,6 +54,19 @@ nav{
     font-family: 'Pacifico', cursive;
     font-size: 2rem;
 }
+// .special{
+//     background: $primary-color;
+//     padding: 1rem;
+//     border-radius: .5rem;
+//     color: $text-color-reverse;
+//     border: 1px solid $primary-color;
+//     &:hover{
+//         transition: .5s;
+//         border: 1px solid $primary-color;
+//         background: transparent;
+//     }
+    
+// }
 
 a{
     text-decoration: none;
@@ -63,7 +77,14 @@ a{
     }
 }
 
-
+@keyframes zoomin{
+    0%{
+        transform: scale(0.5);
+    }
+    100%{
+        transform: scale(1);
+    }
+}
 
 h1{
     font-size: 7rem;
