--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,17 @@ body {
   font-size: 1.5rem;
   font-weight: 575;
   cursor: url(../assets/cursor.png), auto;
+  background: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 nav {
@@ -30,6 +41,7 @@ nav {
   background: #fff;
   -webkit-box-shadow: 0 0.5rem 1rem 0 #F5F6FA;
           box-shadow: 0 0.5rem 1rem 0 #F5F6FA;
+  z-index: 5;
 }
 
 nav ul {
@@ -56,6 +68,7 @@ nav .active:hover {
 .logo {
   font-family: 'Pacifico', cursive;
   font-size: 2rem;
+  padding: 0 2rem;
 }
 
 a {
@@ -66,6 +79,324 @@ a {
 
 a:hover {
   color: #2FD4C9;
+}
+
+.bodysizer {
+  width: 90%;
+}
+
+.linkbuttons a {
+  padding: 1.5rem 2rem;
+  background: #2FD4C9;
+  margin-right: 2rem;
+  color: #fff;
+  border-radius: .5rem;
+  -webkit-transition: .3s;
+  transition: .3s;
+}
+
+.linkbuttons .primarybtn {
+  border: 1px solid #2FD4C9;
+}
+
+.linkbuttons .primarybtn:hover {
+  background: transparent;
+  color: #2FD4C9;
+}
+
+.linkbuttons .secondarybtn {
+  border: 1px solid #2FD4C9;
+  background: transparent;
+  color: #2FD4C9;
+}
+
+.linkbuttons .secondarybtn:hover {
+  background: #2FD4C9;
+  color: #fff;
+}
+
+.home {
+  width: 100%;
+  height: 90vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  position: relative;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.home .sociallinks {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-preferred-size: 5%;
+      flex-basis: 5%;
+}
+
+.home .sociallinks img {
+  width: 3rem;
+}
+
+.home .homecontent {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-preferred-size: 90%;
+      flex-basis: 90%;
+}
+
+.home .homecontent .homedescription {
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+}
+
+.home .homecontent .homedescription h1 {
+  margin-bottom: 1rem;
+}
+
+.home .homecontent .homedescription h4 {
+  margin-bottom: 3rem;
+}
+
+.home .homecontent img {
+  -ms-flex-preferred-size: 40%;
+      flex-basis: 40%;
+  width: 100%;
+  height: 90vh;
+  -o-object-fit: contain;
+     object-fit: contain;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+}
+
+.home .first {
+  -webkit-animation: fadein1s 7s step-end;
+          animation: fadein1s 7s step-end;
+}
+
+.home .second {
+  -webkit-animation: fadein2s 7s step-end;
+          animation: fadein2s 7s step-end;
+}
+
+.home .secondimg {
+  -webkit-animation: imagetranslate 7s ease;
+          animation: imagetranslate 7s ease;
+}
+
+.home .third {
+  -webkit-animation: textpop 7s ease;
+          animation: textpop 7s ease;
+}
+
+.home .fourth {
+  -webkit-animation: buttonanimation 7s ease;
+          animation: buttonanimation 7s ease;
+}
+
+.home .fifth {
+  -webkit-animation: topbottom 7s ease;
+          animation: topbottom 7s ease;
+}
+
+@-webkit-keyframes topbottom {
+  0% {
+    -webkit-transform: translateY(-5rem);
+            transform: translateY(-5rem);
+    opacity: 0;
+  }
+  56% {
+    -webkit-transform: translateY(-5rem);
+            transform: translateY(-5rem);
+    opacity: 0;
+  }
+  70% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 100%;
+  }
+}
+
+@keyframes topbottom {
+  0% {
+    -webkit-transform: translateY(-5rem);
+            transform: translateY(-5rem);
+    opacity: 0;
+  }
+  56% {
+    -webkit-transform: translateY(-5rem);
+            transform: translateY(-5rem);
+    opacity: 0;
+  }
+  70% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 100%;
+  }
+}
+
+@-webkit-keyframes buttonanimation {
+  0% {
+    -webkit-transform: translateY(5rem);
+            transform: translateY(5rem);
+    opacity: 0;
+  }
+  56% {
+    -webkit-transform: translateY(5rem);
+            transform: translateY(5rem);
+    opacity: 0;
+  }
+  70% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 100%;
+  }
+}
+
+@keyframes buttonanimation {
+  0% {
+    -webkit-transform: translateY(5rem);
+            transform: translateY(5rem);
+    opacity: 0;
+  }
+  56% {
+    -webkit-transform: translateY(5rem);
+            transform: translateY(5rem);
+    opacity: 0;
+  }
+  70% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 100%;
+  }
+}
+
+@-webkit-keyframes textpop {
+  0% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+    opacity: 0;
+  }
+  42% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+    opacity: 0;
+  }
+  56% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 100%;
+  }
+}
+
+@keyframes textpop {
+  0% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+    opacity: 0;
+  }
+  42% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+    opacity: 0;
+  }
+  56% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 100%;
+  }
+}
+
+@-webkit-keyframes imagetranslate {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(5rem);
+            transform: translateX(5rem);
+  }
+  28% {
+    opacity: 0;
+    -webkit-transform: translateX(5rem);
+            transform: translateX(5rem);
+  }
+  42% {
+    opacity: 100%;
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+}
+
+@keyframes imagetranslate {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(5rem);
+            transform: translateX(5rem);
+  }
+  28% {
+    opacity: 0;
+    -webkit-transform: translateX(5rem);
+            transform: translateX(5rem);
+  }
+  42% {
+    opacity: 100%;
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+}
+
+@-webkit-keyframes fadein1s {
+  0% {
+    opacity: 0;
+  }
+  14% {
+    opacity: 100%;
+  }
+}
+
+@keyframes fadein1s {
+  0% {
+    opacity: 0;
+  }
+  14% {
+    opacity: 100%;
+  }
+}
+
+@-webkit-keyframes fadein2s {
+  0% {
+    opacity: 0;
+  }
+  28% {
+    opacity: 100%;
+  }
+}
+
+@keyframes fadein2s {
+  0% {
+    opacity: 0;
+  }
+  28% {
+    opacity: 100%;
+  }
 }
 
 @-webkit-keyframes zoomin {
