--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,8 @@ nav {
   -webkit-box-shadow: 0 0.5rem 1rem 0 #F5F6FA;
           box-shadow: 0 0.5rem 1rem 0 #F5F6FA;
   z-index: 5;
+  position: fixed;
+  top: 0;
 }
 
 nav ul {
@@ -57,12 +59,49 @@ nav ul li {
           animation: zoomin 1s ease;
 }
 
+nav img {
+  width: 3.5rem;
+  margin: 0 2rem;
+  display: none;
+}
+
 nav .active {
   color: #2FD4C9;
 }
 
 nav .active:hover {
   color: #2CD0C6;
+}
+
+@media (max-width: 800px) {
+  nav {
+    z-index: 7;
+    padding: 1rem;
+  }
+  nav ul {
+    -webkit-transition: .5s;
+    transition: .5s;
+    top: -100%;
+    width: 100%;
+    position: fixed;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    background: #fff;
+    padding: 1rem;
+    -webkit-box-shadow: 0 0.1rem 0.1rem 0 #F5F6FA;
+            box-shadow: 0 0.1rem 0.1rem 0 #F5F6FA;
+  }
+  nav ul li {
+    padding: .5rem 2rem;
+  }
+  nav img {
+    display: inline;
+  }
+  #navLinks {
+    z-index: 3;
+  }
 }
 
 .logo {
@@ -83,6 +122,13 @@ a:hover {
 
 .bodysizer {
   width: 90%;
+}
+
+@media (max-width: 800px) {
+  .bodysizer {
+    width: 100%;
+    padding: 2rem;
+  }
 }
 
 .linkbuttons a {
@@ -117,7 +163,7 @@ a:hover {
 
 .home {
   width: 100%;
-  height: 90vh;
+  height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -163,6 +209,7 @@ a:hover {
           justify-content: space-between;
   -ms-flex-preferred-size: 90%;
       flex-basis: 90%;
+  height: 100vh;
 }
 
 .home .homecontent .homedescription {
@@ -175,14 +222,14 @@ a:hover {
 }
 
 .home .homecontent .homedescription h4 {
-  margin-bottom: 3rem;
+  margin-bottom: 4rem;
 }
 
 .home .homecontent img {
   -ms-flex-preferred-size: 40%;
       flex-basis: 40%;
   width: 100%;
-  height: 90vh;
+  height: 85%;
   -o-object-fit: contain;
      object-fit: contain;
   -ms-flex-item-align: end;
@@ -217,6 +264,68 @@ a:hover {
 .home .fifth {
   -webkit-animation: topbottom 7s ease;
           animation: topbottom 7s ease;
+}
+
+@media (max-width: 800px) {
+  .home {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .home .sociallinks {
+    width: 70%;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .home .sociallinks a {
+    padding: 0 1rem;
+  }
+  .home .homecontent {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-flex-preferred-size: 70%;
+        flex-basis: 70%;
+    margin-bottom: 4rem;
+  }
+  .home .homecontent .homedescription {
+    -ms-flex-preferred-size: 40%;
+        flex-basis: 40%;
+  }
+  .home .homecontent .homedescription h1 {
+    font-size: 5.5rem;
+  }
+  .home .homecontent .homedescription h4 {
+    font-size: 3rem;
+  }
+  .home .homecontent img {
+    height: 40vh;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    -o-object-fit: scale-down;
+       object-fit: scale-down;
+    -ms-grid-column-align: center;
+        justify-self: center;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
 }
 
 @-webkit-keyframes topbottom {
