--- a/css/style.css
+++ b/css/style.css
@@ -215,6 +215,7 @@ a:hover {
 .home .homecontent .homedescription {
   -ms-flex-preferred-size: 50%;
       flex-basis: 50%;
+  width: 100%;
 }
 
 .home .homecontent .homedescription h1 {
@@ -278,6 +279,7 @@ a:hover {
   }
   .home .sociallinks {
     width: 70%;
+    margin-top: 2rem;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
@@ -299,9 +301,9 @@ a:hover {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    -ms-flex-preferred-size: 70%;
-        flex-basis: 70%;
-    margin-bottom: 4rem;
+    -ms-flex-preferred-size: 50%;
+        flex-basis: 50%;
+    height: 75vh;
   }
   .home .homecontent .homedescription {
     -ms-flex-preferred-size: 40%;
@@ -315,9 +317,7 @@ a:hover {
   }
   .home .homecontent img {
     height: 40vh;
-    width: -webkit-fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
+    width: 100%;
     -o-object-fit: scale-down;
        object-fit: scale-down;
     -ms-grid-column-align: center;
