--- a/css/style.scss
+++ b/css/style.scss
@@ -183,6 +183,7 @@ a{
         height: 100vh;
         .homedescription{
             flex-basis: 50%;
+            width: 100%;
             h1{
                 margin-bottom: 1rem;
             }
@@ -225,6 +226,7 @@ a{
         justify-content: center;
         .sociallinks{
             width: 70%;
+            margin-top: 2rem;
             flex-direction: row;
             flex-wrap: wrap;
             justify-content: center;
@@ -237,8 +239,8 @@ a{
         .homecontent{
             flex-direction: column-reverse;
             justify-content: center;
-            flex-basis: 70%;
-            margin-bottom: 4rem;
+            flex-basis: 50%;
+            height: 75vh;
             .homedescription{
                 flex-basis: 40%;
                 h1{
@@ -251,7 +253,7 @@ a{
             }
             img{
                 height: 40vh;
-                width: fit-content;
+                width: 100%;
                 object-fit: scale-down;
                 justify-self: center;
                 align-self: center;
