--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,8 @@
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   font-family: 'Quicksand', sans-serif;
+  font-style: normal;
+  font-weight: 500;
 }
 
 body {
