--- a/css/style.scss
+++ b/css/style.scss
@@ -17,6 +17,8 @@ $text-color-reverse: #fff;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Quicksand', sans-serif;
+    font-style: normal;
+    font-weight: 500;
 }
 body{
     color: $text-color;
