--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,8 @@ nav .active:hover {
 .logo {
   font-family: 'Pacifico', cursive;
   font-size: 2rem;
+  font-style: normal;
+  font-weight: 400;
   padding: 0 2rem;
 }
 
