--- a/css/style.scss
+++ b/css/style.scss
@@ -93,6 +93,8 @@ nav{
 .logo{
     font-family: 'Pacifico', cursive;
     font-size: 2rem;
+    font-style: normal;
+    font-weight: 400;
     padding: 0 2rem;
 }
 // .special{
