--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,7 @@
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-}
-
-@font-face {
-  font-family: 'Quicksand', sans-serif;
-  src: url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&amp;display=swap");
-  font-style: normal;
-  font-weight: 600;
+  font-family: 'Quicksand','Rubik', sans-serif;
 }
 
 body {
@@ -309,7 +303,7 @@ a:hover {
             justify-content: center;
     -ms-flex-preferred-size: 50%;
         flex-basis: 50%;
-    height: 75vh;
+    height: 80vh;
   }
   .home .homecontent .homedescription {
     -ms-flex-preferred-size: 40%;
