--- a/css/style.scss
+++ b/css/style.scss
@@ -226,10 +226,10 @@ a{
 {
     .home{
         flex-direction: column-reverse;
-        justify-content: center;
+        justify-content: space-between;
         .sociallinks{
             width: 70%;
-            margin-top: 2rem;
+            
             flex-direction: row;
             flex-wrap: wrap;
             justify-content: center;
@@ -243,7 +243,7 @@ a{
             flex-direction: column-reverse;
             justify-content: center;
             flex-basis: 50%;
-            height: 80vh;
+            height: 90vh;
             .homedescription{
                 flex-basis: 40%;
                 h1{
