--- a/css/style.scss
+++ b/css/style.scss
@@ -226,7 +226,7 @@ a{
 {
     .home{
         flex-direction: column-reverse;
-        justify-content: space-between;
+        justify-content: space-around;
         .sociallinks{
             width: 70%;
             
