--- a/css/style.scss
+++ b/css/style.scss
@@ -229,7 +229,7 @@ a{
         justify-content: center;
         .sociallinks{
             width: 70%;
-            
+            height: 10%;
             flex-direction: row;
             flex-wrap: wrap;
             justify-content: center;
@@ -243,7 +243,7 @@ a{
             flex-direction: column-reverse;
             justify-content: center;
             flex-basis: 50%;
-            height: 85vh;
+            height: 80vh;
             .homedescription{
                 flex-basis: 40%;
                 text-align: center;
