--- a/css/style.scss
+++ b/css/style.scss
@@ -164,7 +164,7 @@ a{
 //Home section
 .home{
     max-width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -277,54 +277,44 @@ a{
     }
 }
 
-//about section
-.about{
+//tools section
+.tools{
     width: 100%;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+    min-height: 100vh;
+    
     border-radius: .5rem;
-    margin: 5rem 0;
+    
     background-color: $background-color;
+    h3{
+        text-align: center;
+        padding: 3rem 0;
+        padding-top: 7rem;
+    }
     .tech-icons{
-        display: flex;
-        flex-direction: column;
+        display: grid;
+        grid-template-columns: repeat(4, auto);
+        justify-content: space-evenly;
+        align-items: center;
+        gap: 8rem;
         
-        gap: 3rem;
-        width: 50%;
-        div{
-            display: flex;
-        justify-content: center;
-        gap: 3rem;
-        }
         img{
-            width: 15rem;
+            max-width: 10rem;
+            
         }
     }
-    .about-content{
-        width: 50%;
-        padding: 5rem;
-    }
+    
 }
 
 @media(max-width:800px){
-    .about{
-        flex-direction: column;
-        gap: 3rem;
+    .tools{
         .tech-icons{
-            width: 100%;
-            gap: 2rem;
-        img{
-            width: 10rem;
+            gap: 5rem;
+            grid-template-columns: repeat(3, auto);
+            justify-content: center;
+            img{
+                max-width: 8rem;
+            }
         }
-        }
-        .about-content{
-            width: 100%;
-            padding: 2rem;
-        }
-        
     }
 }
 
